--- a/deployment/kubernetes/deployment.yaml
+++ b/deployment/kubernetes/deployment.yaml
@@ -16,36 +16,4 @@ spec:
         - name: mendix
           image: pyndhotaraya/hello-mendix:latest
           ports:
-            - containerPort: 8080    # Tetap sesuai port yang digunakan aplikasi di dalam container
-          resources:
-            requests:
-              memory: "256Mi"
-              cpu: "250m"
-            limits:
-              memory: "512Mi"
-              cpu: "500m"
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 8080
-            initialDelaySeconds: 10
-            periodSeconds: 15
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 10
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mendix-service
-spec:
-  type: NodePort
-  selector:
-    app: mendix
-  ports:
-    - port: 80 
-      targetPort: 8080 
-      nodePort: 30081 
+            - containerPort: 8081
